Add ParensOfTheDead component